--- a/docs/styles.css
+++ b/docs/styles.css
@@ -137,9 +137,9 @@ button:hover {
   color: var(--dorado);
 }
 
-.mensaje {
+.mensaje2 {
   font-size: 13px;
-  color: var(--gris);
+  color: var(--negro);
   margin-top: 6px;
 }
 
